--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-zoom-pan-pinch": "^3.7.0",
     "recharts": "^3.6.0",
     "rehype-pretty-code": "^0.14.1",
+    "rehype-slug": "^6.0.0",
     "shiki": "^3.21.0",
     "tailwind-merge": "^3.4.0"
   },
